decimate modifier do not show the polycount before decimation #59708

Closed
opened 2018-12-21 06:51:59 +01:00 by Massimiliano Puliero · 5 comments

System Information
Operating system: win7 64bit
Graphics card: gtx 1070

Blender Version
Broken: 2.80.0-git.36121a1bdcd8-windows64
Worked: 2.7x

decimate modifier do not show the polycount before decimation.
It actually update after dragging the slider down and up again.

thanks

decimation.blend
ss.PNG

**System Information** Operating system: win7 64bit Graphics card: gtx 1070 **Blender Version** Broken: 2.80.0-git.36121a1bdcd8-windows64 Worked: 2.7x decimate modifier do not show the polycount before decimation. It actually update after dragging the slider down and up again. thanks [decimation.blend](https://archive.blender.org/developer/F6022588/decimation.blend) ![ss.PNG](https://archive.blender.org/developer/F6022593/ss.PNG)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero
Sebastian Parborg self-assigned this 2018-12-21 10:23:22 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

@brecht seems like the addition of DEG_is_active, is to blame here. (D4106)
If will not show the face count until you change settings of the modifier (the amount of decimation)

@brecht seems like the addition of DEG_is_active, is to blame here. ([D4106](https://archive.blender.org/developer/D4106)) If will not show the face count until you change settings of the modifier (the amount of decimation)

This issue was referenced by 2ca4f4f0cb

This issue was referenced by 2ca4f4f0cb8d5d7e0b759fdc5b5a5b7adf7a5817

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59708
No description provided.