Fix T59708: decimate modifier does not show face count before decimation.